﻿****
News
****

- NEW: Automated tests
- NEW: Padded arrays
- NEW: Strings may contain expressions, not only variable names
- NEW: Array assignments now handled at code generation level (making them subject to rule definitions)
- NEW: autoexp.dat for Visual Studio 2010 (easier debugging of Atalan)
- FIX: Error in values optimizer preventing some optimizations
- FIX: Local variables in macros

===========
19-Feb-2011
===========

- NEW: Support for non-zero based arrays
- NEW: improved support for adr
- OPT: Add instruction merging
- OPT: Null jump elimination
- DOC: added some basic info on adr
- NES: Support for new procedure calls 

===========
6-Feb-2011
===========

- DOC: howto   
- NEW: con6502 platform

===========
30-Jan-2011
===========

- NEW: Basic support for C64 platform
- OPT: Procedure argument in registers
- NEW: Support separate procedure definition & declaration
- NEW: -o option
- NEW: 'in sequence' variables
- NEW: @var in procedure header declaration marks variables used by the procedure
- NEW: Report error when assigning a value to const, type, or in register
- NEW: Report error on duplicit declaration
- NEW: Call procedures and macros with scoped name (pmg.init)


==========
3-Jan-2011
==========

- NEW: Scope type
- NEW: Array of array (massive rewriting of rules matching)
- NEW: Slice addresses
- Atari: PMG support, modified Stars.atl to use new PMG, new PMG.atl example

==========
4-Dec-2010
==========

- NEW: Support for bool in conditions (built in bool type, custom definable bool types)

==========
3-Dec-2010
==========

- NEW: -P option may be used to define target platform 
- NEW: Compiler command is configured in processor file using rule
- NEW: atari.asm moved to m6502.asm (it will be shared by multiple platforms)
- NEW: Preliminary support for Oric Atmos platform
- OPT: when comparing variable that has only two possible value and one of them is 0, always compare to zero

==========
30-Nov-2010
==========
