@@ -1,6 +1,6 @@
 /*
 
-Loop optimalization routines
+Loop optimization routines
 
 (c) 2010 Rudolf Kudla 
 Licensed under the MIT license: http://www.opensource.org/licenses/mit-license.php
